--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul>
             <li class="navigation_list_item"><a href="">Studio</a></li>
-            <li class="navigation_list_item"><a href="">Portfolio</a></li>
+            <li class="navigation_list_item"><a href="portfolio.html">Portfolio</a></li>
             <li class="navigation_list_item"><a href="">Contacts</a></li>
         </ul>
 
