--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <nav><a href="/" class="web">Web<span class="studio-header">studio</span></a>
     
             <ul class="navigation_list">
-                <li class="navigation_list_item"><a href="">Studio</a></li>
+                <li class="navigation_list_item"><a href="index.html">Studio</a></li>
                 <li class="navigation_list_item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="navigation_list_item"><a href="">Contacts</a></li>
             </ul>
