--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav><a href="/" class="web">Web<span class="studio-header">studio</span></a>
 
         <ul>
-            <li class="navigation_list_item"><a href="">Studio</a></li>
-            <li class="navigation_list_item"><a href="portfolio.html">Portfolio</a></li>
-            <li class="navigation_list_item"><a href="">Contacts</a></li>
+            <li class="navigation_list_item"><a href="index.html" class="navigation_list_item">Studio</a></li>
+            <li class="navigation_list_item"><a href="portfolio.html" class="navigation_list_item">Portfolio</a></li>
+            <li class="navigation_list_item"><a href="" class="navigation_list_item">Contacts</a></li>
         </ul>
 
         <address class="adress_list">
@@ -34,7 +34,7 @@
         <section>
             <h1>Effective Solutions
             <br>for Your Business</h1>
-            <button type="button" class="hero-button"><a href="">Order Service</a></button>
+            <button type="button" class="hero-button"><a href="" class="hero-button-text">Order Service</a></button>
         </section>
     </div>
 
