--- a/portfolio.html
+++ b/portfolio.html
@@ -14,19 +14,23 @@
     <!-- Header -->
     <header>
         <nav class="list">
-            <a href="./index.html" class="link">Web<span class="link-header">Studio</span></a>
+            <a href="./index.html" class="logo-link">Web<span class="link-header">Studio</span></a>
     
-            <ul class="navigation_list">
-                <li class="navigation_list_item"><a href="index.html">Studio</a></li>
-                <li class="navigation_list_item"><a href="./portfolio.html">Portfolio</a></li>
-                <li class="navigation_list_item"><a href="">Contacts</a></li>
+            <ul class="contact-list">
+                <li class="list-item"><a href="index.html">Studio</a></li>
+                <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
+                <li class="list-item"><a href="">Contacts</a></li>
             </ul>
         </nav>    
         
-        <address>
-            <ul>
-                <a href="maito:info@devstudio.com" class="adress_list_item">info@devstudio.com</a> 
-                <a href="tel:+110001111111" class="adress_list_item">+11 (000) 111-11-11</a>    
+        <address class="adress">
+            <ul class="contact-list">
+                <li class="contact-link">
+                    <a href="maito:info@devstudio.com" class="contact-link-link">info@devstudio.com</a>
+                </li>
+                <li class="contact-link">
+                    <a href="tel:+110001111111" class="contact-link-link">+11 (000) 111-11-11</a>
+                </li> 
             </ul>
 
         </address>
@@ -34,6 +38,7 @@
     </header>
 
     <!-- main content -->
+    <!-- section 1 -->
     <section>
         <div>
             <ul class="portfolio-button">
@@ -108,7 +113,7 @@
     <footer>
         <div class="footer">
             <nav>
-                <a href="/" class="link">Web<span class="link-footer">Studio</span></a>
+                <a href="/" class="logo-link">Web<span class="link-footer">Studio</span></a>
             </nav>
                 <p class="text-footer">
                     Increase the flow of customers and <br>sales for your business with digital <br>marketing & growth solutions.
