--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- headder -->
     <header>
         <nav class="link">
-            <a href="./index.html" class="logo-link" class="link">Web<span class="link-header">Studio</span></a>
+            <a href="./index.html" class="logo-link-link">Web<span class="link-header">Studio</span></a>
             <ul class="list">
-                <li class="list-item"><a href="index.html" class="list-item">Studio</a></li>
-                <li class="list-item"><a href="./portfolio.html" class="list-item">Portfolio</a></li>
-                <li class="list-item"><a href="" class="list-item">Contacts</a></li>
+                <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
+                <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+                <li class="list-item"><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
         
