--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- headder -->
     <header>
         <nav class="link">
-            <a href="./index.html" class="logo-link-link">Web<span class="link-header">Studio</span></a>
+            <a href="/" class="logo-link-link">Web<span class="link-header">Studio</span></a>
             <ul class="list">
                 <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
                 <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -25,7 +25,7 @@
         
         <address class="address">
 
-            <ul class="contact-list">
+            <ul class="list">
                 <li class="contact-link">
                     <a href="maito:info@devstudio.com" class="contact-link-link">info@devstudio.com</a>
                 </li>
@@ -57,15 +57,15 @@
             </li>
             <li>
                 <h3 class="section-two-title">Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <p class="section-two-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
                 <h3 class="section-two-title">Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <p class="section-two-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
                 <h3 class="section-two-title">Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <p class="section-two-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
 
@@ -116,9 +116,7 @@
    
     <!-- footer -->
     <footer class="footer">
-        <nav>
-            <a href="/" class="logo-link" class="link">Web<span class="link-footer">Studio</span></a>
-        </nav>
+        <a href="/" class="logo-link-link">Web<span class="link-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
 
