--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <nav class="list">
-            <a href="./index.html" class="logo-link-link">Web<span class="link-header">Studio</span></a>
+            <a href="/" class="logo-link-link">Web<span class="link-header">Studio</span></a>
     
             <ul class="contact-list">
                 <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
@@ -25,7 +25,7 @@
         
         <address class="address">
 
-            <ul class="contact-list">
+            <ul class="list">
                 <li class="contact-link">
                     <a href="maito:info@devstudio.com" class="contact-link-link">info@devstudio.com</a>
                 </li>
@@ -112,9 +112,7 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-        <nav>
-            <a href="/" class="logo-link">Web<span class="link-footer">Studio</span></a>
-        </nav>
+        <a href="/" class="logo-link-link">Web<span class="link-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
 </body>
