--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <nav class="list">
-            <a href="/" class="logo-link-link">Web<span class="link-header">Studio</span></a>
+            <a href="/" class="logo-link link">Web<span class="link-header">Studio</span></a>
     
             <ul class="contact-list">
                 <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
@@ -43,7 +43,7 @@
     <main>
         <section>
             <h1>Apps</h1>
-            <ul class="portfolio-button">
+            <ul class="list">
                  <li>
                     <button type="button" class="btn-tab-list">All</button>
                 </li>
@@ -61,51 +61,51 @@
                 </li>
             </ul>
             
-            <ul>
+            <ul class="list">
                 <li>
-                    <img src="./img/img.png" alt="Banking App Interface Concept" width="360" height="300">
-                    <h3>Banking App Interface Concept</h3>
-                    <p>App</p>
+                    <img src="./images/img.jpg" alt="Banking App Interface Concept" width="360">
+                    <h3 class="portfolio-title">Banking App Interface Concept</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
-                    <img src="./img/cashless.png" alt="Cashless Payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                    <h3 class="portfolio-title">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/meditation.png" alt="Meditation App" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <img src="./images/meditation.jpg" alt="Meditation App" width="360">
+                    <h3 class="portfolio-title">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
                 <li>
-                    <img src="./img/taxi.png" alt="Taxi Service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <img src="./images/taxi.jpg alt="Taxi Service" width="360">
+                    <h3 class="portfolio-title">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/screen.png" alt="Screen Illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
-                    <img src="./img/online.png" alt="Online Courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <img src="./images/online.jpg" alt="Online Courses" width="360">
+                    <h3 class="portfolio-title">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/intagram.png" alt="Instagram Stories Concept" width="360" height="300">
-                    <h3>Instagram Stories Concept</h3>
-                    <p>Design</p>
+                    <img src="./images/intagram.jpg" alt="Instagram Stories Concept" width="360">
+                    <h3 class="portfolio-title">Instagram Stories Concept</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
                 <li>
-                    <img src="./img/organic.png" alt="Organic Food" width="360" height="300">
-                    <h3>Organic Food</h3>
-                    <p>Web Site</p>
+                    <img src="./images/organic.jpg" alt="Organic Food" width="360">
+                    <h3 class="portfolio-title">Organic Food</h3>
+                    <p class="portfolio-text">Web Site</p>
                 </li>
                 <li>
-                    <img src="./img/fresh.png" alt="Fresh Coffee" width="360" height="300">
-                    <h3>Fresh Coffee</h3>
-                    <p>Web Site</p>
+                    <img src="./images/fresh.jpg" alt="Fresh Coffee" width="360">
+                    <h3 class="portfolio-title">Fresh Coffee</h3>
+                    <p class="portfolio-text">Web Site</p>
                 </li>
             </ul>
         </section>
