--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- headder -->
     <header>
         <nav class="link">
-            <a href="/" class="logo-link-link">Web<span class="link-header">Studio</span></a>
+            <a href="/" class="logo-link link">Web<span class="link-header">Studio</span></a>
             <ul class="list">
                 <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
                 <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -76,9 +76,9 @@
         <h2 class="section-three-title">What are we doing</h2>
 
         <ul class="list">
-            <li><img src="img/computer.png" alt="Computer" width="360"></li>
-            <li><img src="img/phone.png" alt="Phone" width="360"></li>
-            <li><img src="img/comp_phone.png" alt="Computer and phone" width="360"></li>
+            <li><img src="./images/computer.jpg" alt="Computer" width="360"></li>
+            <li><img src="./images/phone.jpg" alt="Phone" width="360"></li>
+            <li><img src="./images/comp_phone.jpg" alt="Computer and phone" width="360"></li>
         </ul>
         
     </section>
@@ -88,22 +88,22 @@
         <h2 class="section-four-tile">Our Team</h2>
         <ul class="list">
             <li class="our-team">
-                <img src="img/mark.png" alt="Mark Guerrero">
+                <img src="./images/mark.jpg" alt="Mark Guerrero">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="section-two-text">Product Designer</p>
             </li>
             <li class="our-team">
-                <img src="img/tom.png" alt="Tom Ford">
+                <img src="./images/tom.jpg" alt="Tom Ford">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="section-two-text">Frontend Developer</p>
             </li>
             <li class="our-team">
-                <img src="img/camila.png" alt="Camila Garcia">
+                <img src="./images/camila.jpg" alt="Camila Garcia">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="section-two-text">Marketing</p>
             </li>
             <li class="our-team">
-                <img src="img/daniel.png" alt="Daniel Wilson">
+                <img src="./images/daniel.jpg" alt="Daniel Wilson">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="section-two-text">UI Designer</p>
             </li>
@@ -116,7 +116,7 @@
    
     <!-- footer -->
     <footer class="footer">
-        <a href="/" class="logo-link-link">Web<span class="link-footer">Studio</span></a>
+        <a href="/" class="logo-link link">Web<span class="link-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
 
