--- a/portfolio.html
+++ b/portfolio.html
@@ -63,46 +63,55 @@
             
             <ul class="list">
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/img.jpg" alt="Banking App Interface Concept" width="360">
                     <h3 class="portfolio-title">Banking App Interface Concept</h3>
                     <p class="portfolio-text">App</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-title">Cashless Payment</h3>
                     <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/meditation.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-title">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/taxi.jpg alt="Taxi Service" width="360">
                     <h3 class="portfolio-title">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/online.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-title">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/intagram.jpg" alt="Instagram Stories Concept" width="360">
                     <h3 class="portfolio-title">Instagram Stories Concept</h3>
                     <p class="portfolio-text">Design</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/organic.jpg" alt="Organic Food" width="360">
                     <h3 class="portfolio-title">Organic Food</h3>
                     <p class="portfolio-text">Web Site</p>
                 </li>
                 <li>
+                    <a href="" class="link"></a>
                     <img src="./images/fresh.jpg" alt="Fresh Coffee" width="360">
                     <h3 class="portfolio-title">Fresh Coffee</h3>
                     <p class="portfolio-text">Web Site</p>
