--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="main">
     <!-- headder -->
     <header>
         <nav class="link">
@@ -27,10 +27,10 @@
 
             <ul class="list">
                 <li class="contact-link">
-                    <a href="maito:info@devstudio.com" class="contact-link-link">info@devstudio.com</a>
+                    <a href="maito:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
                 </li>
                 <li class="contact-link">
-                    <a href="tel:+110001111111" class="contact-link-link">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="contact-link link">+11 (000) 111-11-11</a>
                 </li> 
             </ul>
 
