--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,13 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="portfolio">
     <!-- Header -->
     <header>
         <nav class="list">
             <a href="/" class="logo-link link">Web<span class="link-header">Studio</span></a>
     
-            <ul class="contact-list">
+            <ul class="list">
                 <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
                 <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
                 <li class="list-item"><a href="" class="link">Contacts</a></li>
@@ -27,10 +27,10 @@
 
             <ul class="list">
                 <li class="contact-link">
-                    <a href="maito:info@devstudio.com" class="contact-link-link">info@devstudio.com</a>
+                    <a href="maito:info@devstudio.com" class="contact-link link">info@devstudio.com</a>
                 </li>
                 <li class="contact-link">
-                    <a href="tel:+110001111111" class="contact-link-link">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="contact-link link">+11 (000) 111-11-11</a>
                 </li> 
             </ul>
 
@@ -82,7 +82,7 @@
                 </li>
                 <li>
                     <a href="" class="link"></a>
-                    <img src="./images/taxi.jpg alt="Taxi Service" width="360">
+                    <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-title">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p>
                 </li>
