--- a/portfolio.html
+++ b/portfolio.html
@@ -63,58 +63,60 @@
             
             <ul class="list">
                 <li>
-                    <a href="" class="link"></a>
-                    <img src="./images/img.jpg" alt="Banking App Interface Concept" width="360">
-                    <h3 class="portfolio-title">Banking App Interface Concept</h3>
-                    <p class="portfolio-text">App</p>
+                    <a href="" class="link">
+                        <img src="./images/img.jpg" alt="Banking App Interface Concept" width="360">
+                        <h3 class="portfolio-title">Banking App Interface Concept</h3>
+                        <p class="portfolio-text">App</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
-                    <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="portfolio-title">Cashless Payment</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <a href="" class="link">
+                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
+                        <h3 class="portfolio-title">Cashless Payment</h3>
+                        <p class="portfolio-text">Marketing</p>
+                    </a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/meditation.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-title">Meditation App</h3>
-                    <p class="portfolio-text">App</p>
+                    <p class="portfolio-text">App</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-title">Taxi Service</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
-                    <p class="portfolio-text">Design</p>
+                    <p class="portfolio-text">Design</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/online.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-title">Online Courses</h3>
-                    <p class="portfolio-text">Marketing</p>
+                    <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/intagram.jpg" alt="Instagram Stories Concept" width="360">
                     <h3 class="portfolio-title">Instagram Stories Concept</h3>
-                    <p class="portfolio-text">Design</p>
+                    <p class="portfolio-text">Design</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/organic.jpg" alt="Organic Food" width="360">
                     <h3 class="portfolio-title">Organic Food</h3>
-                    <p class="portfolio-text">Web Site</p>
+                    <p class="portfolio-text">Web Site</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/fresh.jpg" alt="Fresh Coffee" width="360">
                     <h3 class="portfolio-title">Fresh Coffee</h3>
-                    <p class="portfolio-text">Web Site</p>
+                    <p class="portfolio-text">Web Site</p></a>
                 </li>
             </ul>
         </section>
