--- a/portfolio.html
+++ b/portfolio.html
@@ -45,85 +45,92 @@
             <h1>Apps</h1>
             <ul class="list">
                  <li>
-                    <button type="button" class="btn-tab-list">All</button>
+                    <button type="button" class="button-portfolio">All</button>
                 </li>
                 <li>
-                    <button type="button" class="btn-tab-list">Web Site</button>
+                    <button type="button" class="button-portfolio">Web Site</button>
                 </li>
                 <li>
-                    <button type="button" class="btn-tab-list">App</button>
+                    <button type="button" class="button-portfolio">App</button>
                 </li>
                 <li>
-                    <button type="button" class="btn-tab-list">Design</button>
+                    <button type="button" class="button-portfolio">Design</button>
                 </li>
                 <li>
-                    <button type="button" class="btn-tab-list">Marketing</button>
+                    <button type="button" class="button-portfolio">Marketing</button>
                 </li>
             </ul>
             
             <ul class="list">
-                <li>
+                <li class="link">
                     <a href="" class="link">
                         <img src="./images/img.jpg" alt="Banking App Interface Concept" width="360">
                         <h3 class="portfolio-title">Banking App Interface Concept</h3>
                         <p class="portfolio-text">App</p>
                     </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
                         <h3 class="portfolio-title">Cashless Payment</h3>
                         <p class="portfolio-text">Marketing</p>
                     </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/meditation.jpg" alt="Meditation App" width="360">
-                    <h3 class="portfolio-title">Meditation App</h3>
-                    <p class="portfolio-text">App</p></a>
+                        <img src="./images/meditation.jpg" alt="Meditation App" width="360">
+                        <h3 class="portfolio-title">Meditation App</h3>
+                        <p class="portfolio-text">App</p>
+                </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
-                    <h3 class="portfolio-title">Taxi Service</h3>
-                    <p class="portfolio-text">Marketing</p></a>
+                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
+                        <h3 class="portfolio-title">Taxi Service</h3>
+                        <p class="portfolio-text">Marketing</p>
+                    </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="portfolio-title">Screen Illustrations</h3>
-                    <p class="portfolio-text">Design</p></a>
+                        <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
+                        <h3 class="portfolio-title">Screen Illustrations</h3>
+                        <p class="portfolio-text">Design</p>
+                    </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/online.jpg" alt="Online Courses" width="360">
-                    <h3 class="portfolio-title">Online Courses</h3>
-                    <p class="portfolio-text">Marketing</p></a>
+                        <img src="./images/online.jpg" alt="Online Courses" width="360">
+                        <h3 class="portfolio-title">Online Courses</h3>
+                        <p class="portfolio-text">Marketing</p>
+                    </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/intagram.jpg" alt="Instagram Stories Concept" width="360">
-                    <h3 class="portfolio-title">Instagram Stories Concept</h3>
-                    <p class="portfolio-text">Design</p></a>
+                        <img src="./images/intagram.jpg" alt="Instagram Stories Concept" width="360">
+                        <h3 class="portfolio-title">Instagram Stories Concept</h3>
+                        <p class="portfolio-text">Design</p>
+                    </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/organic.jpg" alt="Organic Food" width="360">
-                    <h3 class="portfolio-title">Organic Food</h3>
-                    <p class="portfolio-text">Web Site</p></a>
+                        <img src="./images/organic.jpg" alt="Organic Food" width="360">
+                        <h3 class="portfolio-title">Organic Food</h3>
+                        <p class="portfolio-text">Web Site</p>
+                    </a>
                 </li>
-                <li>
+                <li class="link">
                     <a href="" class="link">
-                    <img src="./images/fresh.jpg" alt="Fresh Coffee" width="360">
-                    <h3 class="portfolio-title">Fresh Coffee</h3>
-                    <p class="portfolio-text">Web Site</p></a>
+                        <img src="./images/fresh.jpg" alt="Fresh Coffee" width="360">
+                        <h3 class="portfolio-title">Fresh Coffee</h3>
+                        <p class="portfolio-text">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-        <a href="/" class="logo-link-link">Web<span class="link-footer">Studio</span></a>
+        <a href="/" class="logo-link link">Web<span class="link-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
 </body>
