--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="link">
             <a href="/" class="logo-link link">Web<span class="link-header">Studio</span></a>
             <ul class="list">
-                <li class="list-item"><a href="./index.html" class="link">Studio</a></li>
-                <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
-                <li class="list-item"><a href="" class="link">Contacts</a></li>
+                <li class="list-item"><a href="./index.html" class="nav-link link">Studio</a></li>
+                <li class="list-item"><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+                <li class="list-item"><a href="" class="nav-link link">Contacts</a></li>
             </ul>
         </nav>
         
